# okami

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/okami/: Async.hpp  BoundingBox.hpp  Camera.hpp  Clock.hpp  Destroyer.hpp  Embed.hpp  Event.hpp  Frame.hpp  FrameSystem.hpp  Geometry.hpp  Graphics.hpp  GraphicsComponents.hpp  GraphicsPrimitives.hpp  Hashers.hpp  Input.hpp  Interface.hpp  Material.hpp  Meta.hpp  MipGenerator.hpp  Observer.hpp  Okami.hpp  PlatformDefs.hpp  Pool.hpp  RefCount.hpp  Resource.hpp  ResourceBackend.hpp  ResourceInterface.hpp  ResourceManager.hpp  ResourcePool.hpp  Revamp.hpp  StaticMesh.hpp  System.hpp  Texture.hpp  Transform.hpp  VertexFormat.hpp  VertexLayout.hpp
core/src/: Clock.cpp  Destroyer.cpp  Embed.cpp  Frame.cpp  FrameSystem.cpp  Geometry.cpp  Graphics.cpp  Material.cpp  Meta.cpp  ResourceInterface.cpp  ResourceManager.cpp  System.cpp  Texture.cpp  Transform.cpp  VertexFormat.cpp  VertexLayout.cpp
ext/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/diligent/: CMakeLists.txt
graphics/diligent/include/okami/: BasicRenderer.hpp  Display.hpp  GraphicsUtils.hpp  Shader.hpp  ShaderPreprocessor.hpp  UniformBuffer.hpp
graphics/diligent/include/okami/diligent/: BasicRenderer.hpp  Buffers.hpp  Display.hpp  FirstPersonCamera.hpp  Glfw.hpp  GraphicsUtils.hpp  Im3dGizmo.hpp  Im3dModule.hpp  Im3dSystem.hpp  ImGuiSystem.hpp  RenderModule.hpp  SceneGlobals.hpp  Shader.hpp  ShaderPreprocessor.hpp  ShaderTypes.hpp  SpriteBatch.hpp  SpriteModule.hpp  StaticMeshModule.hpp  TextureCapture.hpp
graphics/diligent/shaders/: BasicPixel.psh  BasicTypes.hlsl  BasicVert.vsh  CMakeLists.txt  Common.hlsl  Default.psh  StaticMesh.vsh
graphics/diligent/shaders/Im3d/: Im3d.psh  Im3d.sprj  Im3d.vsh  Im3dLines.gsh  Im3dPoints.gsh  Types.hlsl
graphics/diligent/shaders/Im3d/buffers/: LineBuffer.buf  PointsBuffer.buf  TrisBuffer.buf
graphics/diligent/shaders/Im3d/shaders/: Common.hlsl  Im3dGS.hlsl  Im3dPS.hlsl  Im3dVS.hlsl
graphics/diligent/shaders/Interface/: Common.hlsl  Lights.hlsl  Material.hlsl
graphics/diligent/shaders/SpriteBatch/: SpriteBatch.gsh  SpriteBatch.psh  SpriteBatch.vsh  Types.hlsl
graphics/diligent/shaders/Utils/: BRDFs.hlsl  VertexProcessing.hlsl
graphics/diligent/src/: BasicRenderer.cpp  Display.cpp  Editor.cpp  FirstPersonCamera.cpp  Glfw.cpp  Graphics.cpp  GraphicsUtils.cpp  Im3dGizmo.cpp  Im3dModule.cpp  Im3dSystem.cpp  ImGuiSystem.cpp  RenderModule.cpp  Shader.cpp  ShaderPreprocessor.cpp  SpriteBatch.cpp  SpriteModule.cpp  StaticMeshModule.cpp  SurfaceHelper.mm  TextureCapture.cpp
graphics/interface/okami/: Graphics.hpp
tests/: CMakeLists.txt
tests/DiligentEditorTest/: CMakeLists.txt  main.cpp
tests/DiligentFPSCameraTest/: CMakeLists.txt  main.cpp
tests/DiligentGeometryTest/: CMakeLists.txt  main.cpp
tests/DiligentIm3dTest/: CMakeLists.txt  main.cpp
tests/DiligentImGuiTest/: CMakeLists.txt  main.cpp
tests/DiligentMeshPrefabTest/: CMakeLists.txt  main.cpp
tests/DiligentPickTest/: CMakeLists.txt  main.cpp
tests/DiligentSpriteTest/: CMakeLists.txt  main.cpp
tests/DiligentTest/: CMakeLists.txt  main.cpp
tests/DiligentTextureTest/: CMakeLists.txt  main.cpp
tests/GLFWTest/: CMakeLists.txt  main.cpp
tests/GeometryLoadTest/: CMakeLists.txt  main.cpp
tests/HelloWorld/: CMakeLists.txt  main.cpp
tests/LightTest/: CMakeLists.txt  main.cpp
tests/TransformGizmoTest/: CMakeLists.txt  main.cpp
tests/UpdaterTest/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/embed/: CMakeLists.txt  embedfile.cpp
tools/mesh2cpp/: CMakeLists.txt  mesh2cpp.cpp
