cmake_minimum_required(VERSION 3.6)

add_subdirectory(assimp)
add_subdirectory(marl)
add_subdirectory(entt)
add_subdirectory(glm)

SET(ASSIMP_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/assimp/include" CACHE INTERNAL "ASSIMP_INCLUDE_DIR")
SET(MARL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/marl/include" CACHE INTERNAL "MARL_INCLUDE_DIR")
SET(ENTT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/entt/include" CACHE INTERNAL "ENTT_INCLUDE_DIR")
SET(CEREAL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/cereal/include" CACHE INTERNAL "CEREAL_INCLUDE_DIR")
SET(GLM_INCLUDE_DIR "{CMAKE_CURRENT_SOURCE_DIR}/glm/include" CACHE INTERNAL "GLM_INCLUDE_DIR")